<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFormTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/form_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nome_hint"
            android:inputType="textCapSentences"
            android:maxLength="80"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/tvFormTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etQuantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/quantidade_hint"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/etNome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <CheckBox
            android:id="@+id/cbOpcao1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_opcao1"
            app:layout_constraintTop_toBottomOf="@id/etQuantidade"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <CheckBox
            android:id="@+id/cbOpcao2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_opcao2"
            app:layout_constraintTop_toBottomOf="@id/cbOpcao1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvCondicao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/condicao_label"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/cbOpcao2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/rgSimNao"
            android:checkedButton="@id/rbSim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvCondicao"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/rbSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sim"/>

            <RadioButton
                android:id="@+id/rbNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_nao"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tvSpinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_label"
            app:layout_constraintTop_toBottomOf="@id/rgSimNao"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"/>

        <Spinner
            android:id="@+id/spinnerCores"
            android:minHeight="48dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSpinnerLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tvRoupaLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/roupa_label"
            android:labelFor="@id/spinnerRoupas"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/spinnerCores"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinnerRoupas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/tvRoupaLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/foto_descricao"
            android:scaleType="fitCenter"
            android:src="@drawable/roupa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerRoupas" />


        <TextView
            android:id="@+id/tvRatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avaliacao_label"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintTop_toBottomOf="@id/tvRatingLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_enviar"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>